<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    tools:context="de.hsaugsburg.ampelpilot.SettingsActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:text="@string/scalefactor"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/text_Scale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/Text_SeekBar"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <Space
            android:layout_width="261dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/helpButtonScale"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/help"
            android:textSize="24sp" />
    </LinearLayout>


    <SeekBar
        android:id="@+id/seekBar_Scale"
        android:layout_width="match_parent"
        android:max="20"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Genauigkeit"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Performance"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:text="@string/minneighbours"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_MinN"
                android:text="@string/Text_SeekBar"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

        <Space
            android:layout_width="261dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/helpButtonMinN"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/help"
            android:textSize="24sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar_MinN"
        android:layout_width="match_parent"

        android:max="4"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:text="@string/Frames"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_Frames"
                android:text="@string/Text_SeekBar"
                android:textColor="@android:color/white"
                />
        </LinearLayout>

        <Space
            android:layout_width="236dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/helpButtonFrames"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="9dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/help"
            android:textSize="24sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar_Frames"
        android:layout_width="match_parent"
        android:max="7"
        android:layout_height="wrap_content" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>
        <Button
            android:id="@+id/btnGo"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="Fertig"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="Hilfe" />
    </LinearLayout>

</LinearLayout>

